unpackaged/objects/ApexClassMessage__c.object
<CustomObject>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>Apex Class</label>
        <referenceTo>ApexClass__c</referenceTo>
        <relationshipLabel>Apex Classes messages</relationshipLabel>
        <relationshipName>Apex_Classes_messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Apex Class Message</label>
    <nameField>
        <label>Nome de Apex Class Message</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Classes messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>